# jenkins_repl

./: Jenkinsfile.groovy  Jenkinsfile.mocks.groovy  Jenkinsfile.sh  Makefile  README.rst  docker-compose.yml  pyproject.toml
jenkins_repl/: Jenkinsfile.groovy  JenkinsfileScripted.groovy  __init__.py  main.py
jenkins_repl/templates/: pipeline.tmpl
tests/: test_main.py
